--- a/2018.11.16.第一次测试.md
+++ b/2018.11.16.第一次测试.md
@@ -7,6 +7,20 @@
 
 
 01. 列出至少 7 个常用 Linux 命令及其基本使用方法
+   ```
+    cp 复制
+    mv 移动/重命名
+    ls 列出文件列表
+    touch 创建文件
+    vi/vim 编辑器 i进入编辑模式， esc进入普通模式，：出发命令模式 ：w写入
+    cd 更改工作目录
+    medir 创建文件夹
+    rm 删除文件 rm -m dir  recursive
+    rmdir 删除空文件夹
+    pwd 打印当前工作目录
+    cat 拼接文件并在控制台输出，往往用来显示文件内容
+   ```
+01.2 git常见的命令及使用的方法：  
     * git init 在一个文件的git文件夹下初始化一个仓库
     * gir status 查看仓库当前状态
     * git add file.txt/. 将文件添加到待提交区
@@ -15,48 +29,65 @@
     * git log 查看文件的提交历史
     * git romote add origin (githup地址) 添加githup远程仓库
     * git push origin master 将本地仓库文件更新到远程仓库
-    * git pull origin next:master 将远程仓库与本地仓库进行合并
+    * git pull origin next:master 将远程仓库与本地仓库进行合并 
+   
 
 02. 什么是 html 实体？常见 html 实体有哪些？
-    * 在html中有些字符是预留的，不能被当作正常字符显示，所以我们要在html源码中使用字符实体(可用实体名称或尸体编号)。
+    ```
+      用表达html里的特殊字符的语法。具体语法是&xxx;
+      xxx可以是符号名字，也可以#Hxxxx符号的16进制unicode编号
+      还可以是 #65105; 中间是符号的十进制unicode编号
+    ```
+    * 在html中有些字符是预留的，不能被当作正常字符显示，所以我们要在html源码中使用字符实体(可用实体名称或实体编号)。
     * `&nbsp;` `&#160;` &nbsp;160号空格符
     * `&lt;` `&#60;`    &lt;  大于号
     * `&gt;` `&#62;`    &gt;  小于号
     * `&amp;` `&#38;`   &amp;  和号
     * `&copy;` `&#169;` &copy; 版权符
     * `&quot;` `&#34;`  &quot; 双引号
-    * `&apos;` `&#39;`  &apos; 单引号 
+    * `&apos;` `&#39;`  &apos; 单引号
 
 03. 计算机为什么使用二进制？
+
     * 二进制只有0和1两个状态，状态简单，可以表达电子器件的状态，如电位电平、正负极等。
     * 二进制的运算规则简单、简化设计。
     * 二进制与布尔值相对应，0和1代表真假两种状态。
     * 二进制足够使用。
 
 04. 什么是 Unicode？如何表示，有什么作用？最通用的 Unicode 实现是？
-    * Unicode是计算机科学领域的一项业界标准。
-    * 它对世界上大部分的文字进行了整理、编码、是的计算机可以用更为简单的方式来呈现和处理文字。
-    * UTF-8
+   ```
+   Unicode就是对全球的每个符号进行统一编号的标准。
+   全世界每个符号都有唯一且不同于符号的编号。可以在同一个文件中表示所有国家的语言符号。
+   UTF-8
+    （ Unicode是计算机科学领域的一项业界标准。它对世界上大部分的文字进行了整理、编码、是的计算机可以用更为简单的方式来呈现和处理文字。UTF-8）
+    ```
 
 05. 什么是 GUI，什么是 CLI，什么是接口/界面？现实生活中有哪些例子？
     * GUI：图形用户界面，指采用图形方式显示的计算机操作用户界面。
     * CLI：命令行界面，指采用指令操作方式显示的计算机用户界面。
     * 接口/界面： 连接两个及以上不同的电子设备使之能够传递任何形式信号。
-    * 实例：现在的电脑系统和手机系统大多使用GUI,Linux系统使用的CLI。
+    * 实例：仪表盘、语言交流（现在的电脑系统和手机系统大多使用GUI,Linux系统使用的CLI。）
 
 06. 在什么情况下 html 标签可以不需要闭合？
-    * 在使用自闭和标签的情况下，即便签内容不含有内容
+    ```
+    根据标准，可以推导出该标签已经结束，则此标签可以不显式闭合
+    ```
 
-07. 在一些情况下某些非自闭合标签的结束标签可以省略的原因是什么？
+07. 在一些情况下某些非自闭合标签的结束标签可以省略的原因是什么？（同上）
     * 通过下一个标签可以推断上一个标签已经结束。
 
 08. 什么是费茨定律？它有哪些应用？
+    ```
+    目标的可达的难易程度很与目标的距离成反比，跟目标的大小成正比。
+
+    ```
+
     * 费茨定律: 一个物体到达另一个物体的时间，和两者之间的大小和距离有关系。
     * 应用： 电脑快捷键和鼠标滚轮的应用  
 
 09. 为什么英文很重要？
     * 英语是国际通用语言
-    * 优秀的文档都是英文的
+    * 优秀的一手文档大部分都是英文的
     * 编程语言也是英文的，要进行语义化编程。
 
 10. 将二进制 `10010` 数转换为十进制数
@@ -67,26 +98,41 @@
 
 12. 将十进制数 `435` 分别转换成二进制数和十六进制数
     * 二进制：110110011
-    * 十六进制： 1B3
+    * 十六进制： 1b3
 
 13. 请说出你对命令行程序的理解，以及其与 GUI 程序的区别
     * 命令行程序快速便捷、方便使用查找。GUI程序使用大多数人的使用，更加让人明了的看到一些操作，形象化。
 
 14. 列出 HTML 中常见的全局属性
-    * `<body>、html、<title>`  
+    * class, id, title, data-, style, hidden, aria-, role="",contentditable
+
 15. 什么是操作系统的路径（Path）？它的作用及应用场景是？
+    ```
+    路径是操作系统设置的一个设置项，其内容是一个文件夹列表。
+    其作用是在命令行界面中输入命令时，会在路径列表中查找对应名称的程序来执行。
+
+    在windows下，可以利用它实现快速打开程序；
+    在运行窗口中输出的命令会在历经列表中查找。
+    只需要主动的为路径列表添加一个文件夹条目，然后往该文件夹中放入快捷方式即可。
+    ```
 
 16. 什么是文本文件？什么是二进制文件？它们最明显的区别是？
+    ```
+    区别能否直接被文本编辑器打开以及内容能否对人可读。
+    ```
     * 文本文件是基于字符编码的文件，二进制文件是基于值编码的文件。
     * 区别： 文本文件和二进制文件在编码上的方式上不同。
 
 17. 为什么说 html 与数学公式有诸多相似之处？
-    * 同为树状结构
+    * 同为树状结构/递归结构/自相适结构。
+    * 其包裹形式跟数学公式中的括号包裹形式一致。
+    * 数学公式里的任意完整表达式可以替代为任意其他表达式、html中任意标签也可以完全替代为其他标签及其子标签。
 
 18. 几种常见图片格式有什么区别和特点？
     * jpg(jpeg)
       - 有损压缩，压缩率很高，一般能够压缩到原始数据量的十分之一。
       - 质量越差，体积越小。
+      - 适合保存现实世界的照片。
     * png (portable network graphic)
       - 无损压缩
       - 适合大片面积相同颜色的图片，典型就是软件的截图。
@@ -95,12 +141,12 @@
     * gif 
       - 动图
       - 无损压缩
-      - 会有压缩过程存在
+      - 会有压缩过程存在，但保存时颜色会取样256中，导致失真。
       - gif图片一般长度都比较小
       - 支持透明。
     * bmp
       - 无压缩，无损
-      - 每个点站三个字节
+      - 每个点站三个字节（24位3个字节）
       - 体积巨大
       - 不适合放在网页中
     * psd(photoshop专有)
@@ -111,32 +157,43 @@
       - Google发明
       - 有损压缩
       - 各方面都胜过jpg
-      - 适合在移动端使用
+      - 适合在移动端使用，已经有很多使用。
 
 19. `data-*` 属性一般是用来干嘛？
     * 一类自定义数据属性，它赋予在所有HTML元素上嵌入自定义数据属性的能力，并可以通过脚本(js)与HTML之间行专有数据的交换。
+    * 之所有不用不带data-的方式保存，是为更符合标准，也为了向未来兼容（现在写的代码在未来不会break)
 
 20. 什么是 MIME Type？
-    * 一种标准化的方式来表示文档的性质和格式。type/subtype
+    * 一种标准化的方式来表示文档的性质和格式,他会决定浏览器的解析一个文件的方式。type/subtype：text/html, application/javascript, text/plain, text/css, application/json
 
 21. 哪些标签可以使用 target 属性？哪些标签可以使用 href 属性？
-    * target：`<a>、<form>、<area>、<link>`
-    * href: `<a> <link>`
+    * target：`<a>、<form>、<area>、<base>`
+    * href: `<a> <link> <area> <base>`
 
 22. 把如下以十进制表示的字节序列按utf8的格式转码为Unicode编码序列。然后查出每个编码对应的具体符号：
-    
     230, 152, 159, 230, 156, 159, 49
-    * -
+    ```
+    11100110 10011000 10011111 -> 0110 0110 0001 1111 -> "星"
+    11100110 10011100 10011111 -> 0110 0111 0001 1111 -> "期"
+    00110001                   -> 0011 0001           -> "1"
+    
+    礼: 793C -> 0111 1001 0011 1100 -> 11100111 10100100 10111100 
+    拜: 62DC -> 0110 0010 1101 1100 -> 11100110 10001011 10011100
+    一: 4e00 -> 0100 1110 0000 0000 -> 11100100 10111000 10000000
+    ```
+    
 
 23. group 类型的标签有哪些？
 
-    `ul ol dl option`
+    `colgroup optgroup hgrounp fieldset`
+
 24. 什么是 SEO？
     * 搜索引擎优化： 是一种通过了解搜索引擎的运作规则来调整网站，以及提高目的网站在有关搜索引擎内排名的方式。
+    * 一般的手段有：https网站、网页html结构更符合于语义化的页面、网站加载更快的页面、特给搜索引擎一些提示。
 
 25. 分别列出每种常见浏览器的内核名称（自己查）。
     * Safari浏览器：Webkit
-    * Chrome浏览器/Opera：Chroem webkit(Blink)
+    * Chrome浏览器/Opera：Chrome webkit(Blink)
     * IE浏览器：Trident
     * 火狐浏览器： Gecko
     * 360、遨游、猎豹：Trident + Chrome webkit
@@ -144,28 +201,47 @@
 27. 列表类标签有哪些？分别如何使用？需要注意些什么？
     * 无序列表`<ul>`: 给内容数据添加语义列表，数据无先后之分。常用于新闻、商品列表等无先后顺序之分的聊表。要和`<li>`组合使用。一般标签中只能包含`<li>`标签。
     * 有序列表`<ol>`: 给内容数据添加语义列表，数据有先后之分。常用于歌单、排行榜等有先后顺序之分的聊表。要和`<li>`组合使用。和`<li>`组合使用。一般标签中只能包含`<li>`标签。
-    * 定义列表`<dl>`: 用`dt`来定义标题，`<dd>`定义标题的描述。常用于网站尾部相关信息，图文混排等。 需要`<dl><dt><dl>`组合使用。一般`<dt>`标签只对应一个`<dd>`标签，但也可以有多个。 
+    * 定义列表`<dl>`: 用`dt`来定义标题，`<dd>`定义标题的描述。常用于网站尾部相关信息，图文混排等。 需要`<dl><dt><dd>`组合使用。一般`<dt>`标签只对应一个`<dd>`标签，但也可以有多个。 
 
 27. 为什么查文档一般不推荐 W3School？
     * 商业网站、老、旧、更新较慢、有错误。
 
-28. 为什么不同类型的标签的 fallback 内容要以不同的形式提供？
-    * -
+28. 为什么不同类型的标签的 fallback(退化/降级) 内容要以不同的形式提供？
+    ```
+      <canvas>您的浏览器该升级了</canvas>
+      <iframe>您的浏览器该升级了</iframe>
+      反之。
+
+      下面两个标签在正常使用时是要放内容的，而如果吧fallback内容放在标签中间的话，就会有歧义。
+      <script></script>
+      <noscript>您的浏览器该升级了</noscript>
+      <frameset></frameset>
+      <noframes>您的浏览器该升级了</noframes>
+    ```
 
 29. 分别写出在 head 中设定页面编码，设定 
 icon，引入样式表的标签
-
+    ```
+    <meta charset="utf-8">
+    <link rel="icon shortcut" href="">
+    <link rel="stylesheet" type="text/css" href="">
+    ```
 30. 什么叫做可访问性，html 中为此做了什么工作？
+    ```
+    accessibility：指网站或软件能否在各种情况（设备、网络）下使用
+    ```
     * 可访问性：指的是WEB内容对于残障用户的可阅读和可理解性。html对元素和标签进行语义化，提高了网页的可访问性。
 
 31. 请确认以下标签分别属性什么类别（Content Category）？
-    p, meta, h1, fieldset, option, input, area
+
+
+ <!--    p, meta, h1, fieldset, option, input, area
     * 文档元数据： meta 
     * 内容分区： h1
     * 文本内容： p 
     * 表单： fieldset input option 
     * 图片和多媒体： area
-
+ -->
 32. 写出以下几个符号的 ascii 码：`a，A，0，CR，LF，空格，NBSP`。
     * a:97,A:65,0:32,CR:13,LF:10,空格:32,NBSP:160
 
@@ -186,22 +262,27 @@ icon，引入样式表的标签
       </main>
     </section>
     ```
-    * 后代元素：`<li>、<a>,祖先元素：<section>、<html>,子元素：<ul>,父元素：<main>,兄弟元素：<h2>、<aside> `
+    * 后代元素：`<ul>、<li>、<a>,祖先元素：<section>、<html>,子元素：<ul>,父元素：<main>,兄弟元素：<h2>、<aside> `
 
 34. 用什么方法扩大一个 checkbox 的可点击区域？
     * 将它放在`<label>`标签中或把`<label>`标签中的for属性值指向`<input>`标签中的id属性值
 
 35. 什么是 BOM 头？
-    * -
+    ```
+    Byte Order Marker 字节序标记
+    它一般是UTF格式的文本文件的文件头
+    用来表明文件的字节序
+    目前只有windows的词本程序会默认添加，其他编辑器都不会默认添加。
+    ```
 
 36. 常见的替换元素有哪些？它们与非替换元素最大的区别什么？
-    * `<img>、<input>、<buttom>` 
-    * 区别是非替换的元素的内容在自己所包含的文档里，而替换元素是内容是指向另一个文件或通过属性值可以被替换。
+    * `<img>、<input>、<button>、<select>、<progress>、<iframe>`
+    * 最大的区别在于，它们都没有后代元素，以及往往有内在尺寸 (区别是非替换的元素的内容在自己所包含的文档里，而替换元素是8内容是指向另一个文件或通过属性值可以被替换。)
 
 37. 让 CSS 在 HTML 页面上生效有哪几种方法，分别写出来。
-    * 直接在`<head>`标签中写入样式  
-    * 在`<link>`标签中指向外部文件
-    * 在所需的标签中里面直接写入样式
+    * 直接在`<head>`标签中写入样式  style 
+    * 在`<link>`标签中指向外部文件 link
+    * 在所需的标签中里面直接写入样式 `<div style></div>`
 
 38. 如何让页面打印时应用不同的效果？
     * 在link标签中加入media属性
@@ -257,8 +338,9 @@ icon，引入样式表的标签
     <head>
       <title></title>
     </head>
-    <h1>四季变换</h1>
-    <p>一年有四季，四季有其对应的节气。</p>
+    <h2>四季变换</h2>
+    <p>一年有四季，
+       四季有其对应的节气。</p>
     <ul>
       <li>
         <span>春</span>
@@ -288,7 +370,7 @@ icon，引入样式表的标签
           <li>
             <span>下雪了</span>
             <ul>
-              <li>打雪仗</li>
+              <li>打雪仗了</li>
             </ul>
             </li>
           <li>来暖气了</li>
@@ -296,6 +378,7 @@ icon，引入样式表的标签
         </ul>
       </li>
     </ul>
+    <blockquote>知识就是力量，法国就是培根。</blockquote>  (<q></q>)
     <a href="http://baike.baidu.com/item/%E6%98%A5/6983693">春</a>
     <img src="https://www.google.com.hk/images/nav_logo242_hr.png" alt="春">
     <body>
@@ -303,9 +386,9 @@ icon，引入样式表的标签
     </html>
     ```
 41. 什么是模拟信号？什么是数字信号？它们的区别是？
-    * 模拟信号：把设备里读出来的数据直接使用
-    * 数字信号：如果把模拟信号理解成二进制01两种状态，就称为数字信号。
-    * 区别：模拟信号适合远距离传输，衰弱比较小。数字信号适合近距离传输，衰弱较大。
+    * 模拟信号：把设备里读出来的数据直接使用(设备上的物理量直接读出来)
+    * 数字信号：如果把模拟信号理解成二进制01两种状态，就称为数字信号。(把介质上的物理量直接读出来，理解成是01)
+    * 区别：模拟信号适合远距离传输，衰弱比较小。数字信号适合近距离传输，衰弱较大。误差，模拟信号有不可避免的误差，数字信号可以消除误差。
 
 42. 如下表单提交后将跳转到什么地址
     ```html
@@ -327,10 +410,11 @@ icon，引入样式表的标签
       <button>提交</button>
     </form>
     ```
-     * 跳转到`http://www.baidu.com/s?a=bb&b=123&b=456&c=a5&select=04`
+     * 跳转到`http://www.baidu.com/s?a=bb&b=123&b=456&c=a5&select=03`
 
 43. 列出 input 的 type 有哪些值，以及为各个值时分别需要怎么使用。
      * text: 文本框 用于输入文字
+     * password: 密码
      * checkbox: 复选框 用于用户进行多项选择
      * radio: 单选框 用于用户进行单选选择
      * sumbit: 提交按钮
@@ -338,20 +422,25 @@ icon，引入样式表的标签
      * color： 颜色选择
      * time: 时间选择
      * date: 日期选择
-     * file: 上传文件
+     * file: 上传文件 与accept(类型)/multiple(必选）使用
+     * url
+     * number
+     * email
 
 44. 想要让一个文本输入框在页面打开后自动获得光标要怎么办？
      * 在input便签里加上autofocus属性
 
 45. 如何在文本框里放置提示性文字？
-    * 把提示性文字写在标签的value属性的属性值上
+    * 把提示性文字写在标签的placeholder属性的属性值上
 
 46. option 标签的主体内容太长影响用户体验，你会如何解决？
+    * 减少option标签的内容，将完整内容放在option标签的title属性中。
+
 47. 想要在 textarea 标签中默认显示一段 html 代码最安全的做法是什么？
-    * 用html实体转义符对小括号进行转义。
+    * 用html实体转义符对进行转义。
 
 48. 如何禁用一组输入框？
-   * 在fieldset中添加`<legend>`标签
+   * 在fieldset标签中 添加disabled属性
 
 49. 如下表格渲染出来后是什么效果？不要直接将代码贴入jsbin中看效果
     ```html
@@ -400,19 +489,21 @@ icon，引入样式表的标签
     ```
 
 50. HTML 的 `aria-*` 与 `role` 属性的作用是？
-    * role: 在html标签不能充分表达语义化的时候，借助role属性来告诉辅助设备元素所扮演的角色，增加可访问性。
-    * aria-: 增加可访问性。
+    * 在html标签不能充分表达语义化的时候，借助其来告诉辅助设备元素所扮演的角色，增加可访问性。
+    * 缘由： 网页变得复杂后，会需要由很原始的标签来模拟常见视觉元素，而原始标签本身并不具备此语义，软件又无法通过其样式推导其当前所表达的是什么视觉元素，所以需要role属性来表明其当前表达的视觉元素是什么。
+    通过aria-* = * 来表达该ui元素的状态等信息。
+   
 
 
 51. 写出如下标签或属性值的英文全称
 
     标签：html,div,p,a,em,tr,th,td,col,ul,ol,li,dl,dt,dd,pre,nav
-    * HTML: HyperText Markup Language, div: DIvision, p: paragraph, a: anchor, em: emphasized, tr: table row, th: table head cell, td: table data cell, col: column, ul: Unordered list, ol: order list, li: list, dl: definition list, dt: definition term, dd: definition description, pre: preformatted, nav: navigation.
+    * HTML: HyperText Markup Language, div: DIvision, p: paragraph, a: anchor, em: emphasized, tr: table row, th: table head, td: table data, col: column, ul: Unordered list, ol: order list, li: list item, dl: definition list, dt: definition term/title, dd: definition description, pre: preformatted, nav: navigation.
 
     属性：coord,rect,poly,href,src
-    * coord: Coordinates, rect: rectangle, poly:  href: hypertext reference, src: source.
+    * coord: Coordinates, rect: rectangle, poly:polygon,  href: hypertext reference, src: source.
 
 52. 中英互翻
     
     geek，nerd，hacker，edge，bleeding/cutting edge 前沿/尖端/可能存在风险的技术，HTML 实体，coordinate，polygon，bit，byte，alternative，属性，obsolate，二进制，十进制，十六进制，octal，deprecate，loop，行，列，horizontal，语义化，可访问性，
-    * geek: 极客， nerd： 讨厌的人， hacker: 热衷于计算机的人， edge: 边缘、尖锐，cutting edge: 尖端，HTML： 超文本标记语言，实体：entity, coordinate:坐标， polygon: 多边形，bit: 位/比特， byte: 字节， alternative: 选择，属性: attribute, 二进制: binary system, 十进制： decimalism, 十六进制：hexadecimal, octal: 八进制，deprecate: 否决/反对，loop：循环/回路，行：row/line, 列：column, horizontal: 水平/横向，语义化：semantization,可访问性：accessibility
+    * geek: 极客， nerd： 讨厌的人， hacker: 热衷于计算机的人， edge: 边缘、尖锐，cutting edge: 尖端，HTML： 超文本标记语言，实体：entity, coordinate:坐标， polygon: 多边形，bit: 位/比特， byte: 字节， alternative: 选择，属性: attribute,obsolate:已废弃， 二进制: binary system, 十进制： decimalism, 十六进制：hexadecimal, octal: 八进制，deprecate: 否决/反对/不推荐使用，loop：循环/回路，行：row/line, 列：column, horizontal: 水平/横向，语义化：semantization,可访问性：accessibility
