--- a/2018.11.16.第一次测试.md
+++ b/2018.11.16.第一次测试.md
@@ -59,6 +59,10 @@
    Unicode就是对全球的每个符号进行统一编号的标准。
    全世界每个符号都有唯一且不同于符号的编号。可以在同一个文件中表示所有国家的语言符号。
    UTF-8
+   单字节： 0_______
+   双字节： 110_____ 10______ 
+   三字节： 1110____ 10______ 10______
+   四字节： 11110___ 10______ 10______ 10______ 
     （ Unicode是计算机科学领域的一项业界标准。它对世界上大部分的文字进行了整理、编码、是的计算机可以用更为简单的方式来呈现和处理文字。UTF-8）
   ```
 
