--- a/2018.11.16.第一次测试.md
+++ b/2018.11.16.第一次测试.md
@@ -40,8 +40,8 @@
     ```
     * 在html中有些字符是预留的，不能被当作正常字符显示，所以我们要在html源码中使用字符实体(可用实体名称或实体编号)。
     * `&nbsp;` `&#160;` &nbsp;160号空格符
-    * `&lt;` `&#60;`    &lt;  大于号
-    * `&gt;` `&#62;`    &gt;  小于号
+    * `&lt;` `&#60;`    &lt;  小于号
+    * `&gt;` `&#62;`    &gt;  大于号
     * `&amp;` `&#38;`   &amp;  和号
     * `&copy;` `&#169;` &copy; 版权符
     * `&quot;` `&#34;`  &quot; 双引号
